--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/jpg" href="/logo.min.jpg" /> -->
-    <link rel="shortcut icon" href="logo.ico">
+    <link rel="shortcut icon" href="/logo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monza</title>
   </head>
